# ocaml-secp256k1-internal

./: .gitignore  .gitlab-ci.yml  .ocamlformat  Makefile  package-lock.json  secp256k1-internal.opam
config/: config.ml  config.mli  config_stubs.c  discover.ml  dune
scripts/: import-secp256k1.sh  install-nvm.sh
src/: build_wasm.sh  dune  eckey.h  eckey_impl.h  ecmult_const.h  ecmult_const_impl.h  external.ml  external.mli  field.h  field_10x26_impl.h  field_5x52_impl.h  group.h  group_impl.h  internal.ml  internal.mli  num.h  num_gmp_impl.h  runtime.js  runtime_helper.js  runtime_wrap.js  scalar.h  scalar_4x64_impl.h  scalar_8x32_impl.h  scalar_impl.h  scalar_low_impl.h  secp256k1.c  secp256k1_stubs.c  secp256k1_wrap.c
test/: dune  gen-needed-names.sh  gen_needed_names.ml  needed-names  preload.js  test.ml
